infra-deploy/nginx/nginxingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxcontrollermdp
spec:
  ingressClassName: nginx
  rules:
  - host: stage.esslinger.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: airbyte-airbyte-webapp-svc
            port:
              number: 8080
